--- a/src/components/VideoIntro.css
+++ b/src/components/VideoIntro.css
@@ -1,6 +1,7 @@
 .video-intro {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
